Fix product style and layout breaking

--- a/assets/styles/modules/_product_card.scss
+++ b/assets/styles/modules/_product_card.scss
@@ -10,6 +10,7 @@
     border: none;
   }
   &-image {
+    border-radius: 10px;
     max-height: 600px;
     max-width: 400px;
     overflow: hidden;
